openshift/sm_cp_patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secure-kubeflow
spec:
  host: kubeflow.apps.${base_domain}
  port:
    targetPort: 9443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: istio-ingressgateway
