openshift/allow-apiserver-webhooks.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apiserver-webhooks
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: 
      - admission-webhook
      - cache-server
      - seldon
      - katib-controller
  ingress:
    - ports:
      - port: 443
        protocol: TCP
